--- a/home.html
+++ b/home.html
@@ -1,11 +1,40 @@
-<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Home</title>
-</head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/screen.css">
+  <link rel="stylesheet" href="css/print.css" media="print">
+  <title>Leading: Space is just as important as words</title>
+  <meta name="author" content="Courtney Ryan">
+  </head>
 <body>
+<main>
 
+<h1>Welcome Home<h1>
+<h2>You crazy cat lady</h2>
+<hr>
+<p>You've been gone for some time now, so here's an overview.</p>
+
+<p>Then name of the game is to collect as many cats as possible. Now, the difference between being a cat lady and a hoarder is the condition of your home and the wellbeing of your cats.</p>
+
+<p>You must keep your cats happy and healthy. It's not enough to just feed your cats, you must also keep them mentally stimulated by playing games with them. Some cats prefer certain toys over others, but all cats like variety.</p>
+
+<p>Collect as many cats as you can, but never take on more than you can handle, otherwise animal control will come to pay you a visit. This may result in fines and even reposession of your furry friends.
+</p>
+
+
+<h2>It starts with one</h2>
+
+<p>Your first cat is very important!</p>
+
+<p>He or she will teach you how to meet the needs of your pets, so pay attention to their conditions! Hunger, thirst, cleanliness, and happiness are the main meters you want to pay attention to. If a meter is too low, your cat may act out or even get sick.</p>
+
+<p>If a cat gets too unhappy or unhealthy it can determine your success in the game. If a cat dies you will have to dispose of the body and pay a penalty. If too many cats die you will be banned from adopting anymore, which results in a game over.</p>
+
+
+<hr>
+<p><i>Keep your meowers happy and healthy so you can keep collecting kitties!</i>
+</p>
+</main>
 </body>
 </html>
